<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Gallery</string>
    <string name="details_ms">%1$02d:%2$02d</string>
    <string name="details_hms">%1$d:%2$02d:%3$02d</string>
    <string name="movie_view_label">Video player</string>
    <string name="loading_video">Loading video\u2026</string>
    <string name="resume_playing_title">Resume video</string>
    <string name="resume_playing_message">Resume playing from %s ?</string>
    <string name="resume_playing_resume">Resume playing</string>
    <string name="loading">Loading\u2026</string>
    <string name="no_thumbnail">No thumbnail</string>
    <string name="resume_playing_restart">Start over</string>
    <string name="crop_save_text">OK</string>
    <string name="ok">OK</string>
    <string name="saving_image">Saving picture\u2026</string>
    <string name="filtershow_saving_image">Saving picture to <xliff:g id="album_name">%1$s</xliff:g> \u2026</string>
    <string name="crop_label">Crop picture</string>
    <string name="trim_label">Trim video</string>
    <string name="select_image">Select photo</string>
    <string name="select_video">Select video</string>
    <string name="select_item">Select item</string>
    <string name="select_album">Select album</string>
    <string name="set_image">Set as</string>
    <string name="camera_setas_wallpaper">Wallpaper</string>
    <string name="delete">Delete</string>
    <plurals name="delete_selection">
        <item quantity="one">Delete selected item?</item>
        <item quantity="other">Delete selected items?</item>
    </plurals>
    <string name="confirm">OK</string>
    <string name="cancel">Cancel</string>
    <string name="share">Share</string>
    <string name="share_panorama">Share panorama</string>
    <string name="deleted">Deleted</string>
    <string name="undo">UNDO</string>
    <string name="select_all">Select all</string>
    <string name="slideshow">Slideshow</string>
    <string name="details">Details</string>
    <string name="details_title">%1$d of %2$d items:</string>
    <string name="close">Close</string>
    <string name="switch_to_camera">Switch to Camera</string>
    <plurals name="number_of_items_selected">
        <item quantity="zero">%1$d selected</item>
        <item quantity="one">%1$d selected</item>
        <item quantity="other">%1$d selected</item>
    </plurals>
    <plurals name="number_of_albums_selected">
        <item quantity="zero">%1$d selected</item>
        <item quantity="one">%1$d selected</item>
        <item quantity="other">%1$d selected</item>
    </plurals>
    <plurals name="number_of_groups_selected">
        <item quantity="zero">%1$d selected</item>
        <item quantity="one">%1$d selected</item>
        <item quantity="other">%1$d selected</item>
    </plurals>
    <string name="show_on_map">Show on map</string>
    <string name="rotate_left">Rotate left</string>
    <string name="rotate_right">Rotate right</string>
    <string name="no_such_item">Couldn\'t find item.</string>
    <string name="edit">Edit</string>
    <string name="simple_edit">Simple Edit</string>
    <string name="process_caching_requests">Processing caching requests</string>
    <string name="caching_label">Caching\u2026</string>
    <string name="crop_action">Crop</string>
    <string name="trim_action">Trim</string>
    <string name="mute_action">Mute</string>
    <string name="set_as">Set as</string>
    <string name="video_mute_err">The format is not supported and Can\'t mute video.</string>
    <string name="video_err">Can\'t play video.</string>
    <string name="untagged">Untagged</string>
    <string name="no_location">No location</string>
    <string name="no_connectivity">Some locations couldn\'t be identified due to network problems.</string>
    <string name="sync_album_error">Couldn\'t download the photos in this album. Retry later.</string>
    <string name="show_images_only">Images only</string>
    <string name="show_videos_only">Videos only</string>
    <string name="show_all">Images &amp; videos</string>
    <string name="appwidget_title">Photo Gallery</string>
    <string name="appwidget_empty_text">No photos.</string>
    <string name="crop_saved">
        Cropped image saved to <xliff:g id="folder_name">%s</xliff:g>.</string>
    <string name="no_albums_alert">No albums available.</string>
    <string name="empty_album">O images/videos available.</string>
    <string name="make_available_offline">Make available offline</string>
    <string name="sync_picasa_albums">Refresh</string>
    <string name="done">Done</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="path">Path</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="orientation">Orientation</string>
    <string name="duration">Duration</string>
    <string name="mimetype">MIME type</string>
    <string name="file_size">File size</string>
    <string name="maker">Maker</string>
    <string name="model">Model</string>
    <string name="flash">Flash</string>
    <string name="aperture">Aperture</string>
    <string name="focal_length">Focal Length</string>
    <string name="white_balance">White balance</string>
    <string name="exposure_time">Exposure time</string>
    <string name="iso">ISO</string>
    <string name="unit_mm">mm</string>
    <string name="manual">Manual</string>
    <string name="auto">Auto</string>
    <string name="flash_on">Flash fired</string>
    <string name="flash_off">No flash</string>
    <string name="unknown">Unknown</string>
    <string name="ffx_vintage">Vintage</string>
    <string name="ffx_instant">Instant</string>
    <string name="ffx_bleach">Bleach</string>
    <string name="ffx_blue_crush">Blue</string>
    <string name="ffx_bw_contrast">B/W</string>
    <string name="ffx_punch">Punch</string>
    <string name="ffx_x_process">X Process</string>
    <string name="ffx_washout">Latte</string>
    <string name="ffx_washout_color">Litho</string>
    <plurals name="make_albums_available_offline">
        <item quantity="one">Making album available offline.</item>
        <item quantity="other">Making albums available offline.</item>
    </plurals>
    <string name="try_to_set_local_album_available_offline">
        This item is stored locally and available offline.</string>
    <string name="set_label_local_albums">Local albums</string>
    <string name="free_space_format"><xliff:g id="bytes">%s</xliff:g> free</string>
    <string name="size_below"><xliff:g id="size">%1$s</xliff:g> or below</string>
    <string name="size_above"><xliff:g id="size">%1$s</xliff:g> or above</string>
    <string name="size_between"><xliff:g id="min_size">%1$s</xliff:g> to <xliff:g id="max_size">%2$s</xliff:g></string>
    <string name="Import">Import</string>
    <string name="import_complete">Import complete</string>
    <string name="widget_type_album">Choose an album</string>
    <string name="widget_type_shuffle">Shuffle all images</string>
    <string name="widget_type_photo">Choose an image</string>
    <string name="widget_type">Choose images</string>
    <string name="settings">Settings</string>
    <string name="folder_camera">Camera</string>
    <string name="folder_download">Download</string>
    <string name="folder_edited_online_photos">Edited Online Photos</string>
    <string name="folder_imported">Imported</string>
    <string name="folder_screenshot">Screenshot</string>
    <string name="help">Help</string>
    <string name="no_external_storage_title">No Storage</string>
    <string name="no_external_storage">No external storage available</string>
    <string name="switch_photo_filmstrip">Filmstrip view</string>
    <string name="switch_photo_grid">Grid view</string>
    <string name="switch_photo_fullscreen">Fullscreen view</string>
    <string name="trimming">Trimming</string>
    <string name="muting">Muting</string>
    <string name="please_wait">Please wait</string>
    <string name="save_into">Saving video to <xliff:g id="album_name">%1$s</xliff:g> \u2026</string>
    <string name="pano_progress_text">Rendering panorama</string>
    <string name="save" msgid="8140440041190264400">Save</string>
    <string name="ingest_import">@string/Import</string>
    <string name="ingest_import_complete">@string/import_complete</string>
    <string name="ingest_scanning" msgid="2048262851775139720">Scanning content...</string>
    <plurals name="ingest_number_of_items_scanned">
        <item quantity="zero">%1$d items scanned</item>
        <item quantity="one">%1$d item scanned</item>
        <item quantity="other">%1$d items scanned</item>
    </plurals>
    <plurals name="ingest_number_of_items_selected">
        <item quantity="zero">%1$d items selected</item>
        <item quantity="one">%1$d item selected</item>
        <item quantity="other">%1$d items selected</item>
    </plurals>
    <string name="ingest_sorting" msgid="624687230903648118">Sorting...</string>
    <string name="ingest_scanning_done">Scanning done</string>
    <string name="ingest_importing">Importing...</string>
    <string name="ingest_empty_device">There is no content available for importing on this device.</string>
    <string name="ingest_no_device">There is no MTP device connected</string>
    <string name="ingest_switch_photo_grid">@string/switch_photo_grid</string>
    <string name="ingest_switch_photo_fullscreen">@string/switch_photo_fullscreen</string>
    <string name="camera_label">Camera</string>
    <string name="accessibility_play_video">Play video</string>
    <string name="accessibility_pause_video">Pause video</string>
    <string name="accessibility_reload_video">Reload video</string>
    <string name="accessibility_time_bar">Video player time bar</string>
    <plurals name="number_of_photos">
        <item quantity="one">%1$d photo</item>
        <item quantity="other">%1$d photos</item>
    </plurals>
    <string name="can_not_trim">The format is not supported and can not be cropped</string>
    <string name="sort_by_time">Sort by time</string>
    <string name="sort_by_hot">Sort by hot</string>
    <string name="gesture_to_fisrt">Already is the first item</string>
    <string name="gesture_to_last">Already is the last item</string>
</resources>