<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_edit"
        android:showAsAction="ifRoom"
        android:title="@string/edit"
        android:visible="false"/>
    <item
        android:id="@+id/menu_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:showAsAction="ifRoom"
        android:title="@string/delete"
        android:visible="false"/>
    <item
        android:id="@+id/menu_share"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:showAsAction="ifRoom"
        android:title="@string/share"
        android:visible="false"/>
    <item
        android:id="@+id/menu_crop"
        android:showAsAction="never"
        android:title="@string/crop_action"
        android:visible="false"/>
    <item
        android:id="@+id/menu_trim"
        android:showAsAction="never"
        android:title="@string/trim_action"
        android:visible="false"/>
    <item
        android:id="@+id/menu_mute"
        android:showAsAction="never"
        android:title="@string/mute_action"
        android:visible="false"/>
    <item
        android:id="@+id/menu_set_as"
        android:showAsAction="never"
        android:title="@string/set_as"
        android:visible="false"/>
</menu>