<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2010 Google Inc.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_camera"
        android:icon="@drawable/ic_menu_camera_holo_light"
        android:showAsAction="never"
        android:title="@string/switch_to_camera"/>

    <!-- Added by TYD Theobald_Wu on 2014/01 [begin] for jigsaw feature -->
    <item
        android:id="@+id/action_jigsaw"
        android:icon="@drawable/ic_menu_jigsaw_blue"
        android:showAsAction="never"
        android:title="@string/jigsaw_title"/>
    <!-- Added by TYD Theobald_Wu on 2014/01 [end] -->

    <item
        android:id="@+id/action_select"
        android:showAsAction="never"
        android:title="@string/select_album"/>
    <!-- Added by xueweili for album visble select, 2015-7-23 -->
    <item
        android:id="@+id/action_visible_all"
        android:icon="@drawable/ic_menu_hide_album"
        android:showAsAction="never"
        android:title="@string/hide_album"/>
    <!-- Tyd -->
    <item
        android:id="@+id/action_manage_offline"
        android:showAsAction="never"
        android:title="@string/make_available_offline"
        android:visible="false"/>
    <item
        android:id="@+id/action_sync_picasa_albums"
        android:showAsAction="never"
        android:title="@string/sync_picasa_albums"
        android:visible="false"/>
    <item
        android:id="@+id/action_settings"
        android:showAsAction="never"
        android:title="@string/settings"/>
    <item
        android:id="@+id/action_general_help"
        android:showAsAction="never"
        android:title="@string/help"
        android:visible="false"/>
</menu>
